[tool.poetry]
name = "task 1 to 4"
version = "0.1.0"
description = "test_task"
authors = ["darkwolf1990 <whitejaguar08@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.4.2"
pyspark = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
